# Psygine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-NOTICES.md  THIRD_PARTY_LICENSES.md  THIRD_PARTY_NOTICES.md  bgfx-license  notes
.reuse/: dep5
LICENSES/: BSD-2-Clause.txt  MIT.txt  Zlib.txt  sdl3-license.txt
cmake/: psygineConfig.cmake.in
src/: library.h
src/core/: clock.cpp  clock.hpp  runtime.cpp  runtime.hpp  sdl_raii.hpp  time.cpp  time.hpp
src/psygine/core/: base_state.hpp  clock.cpp  clock.hpp  random.hpp  resource_manager.hpp  runtime.cpp  runtime.hpp  runtime_config.hpp  sdl_raii.hpp  state_manager.cpp  state_manager.hpp  time.cpp  time.hpp
src/psygine/debug/: assert.hpp
src/psygine/utilities/: clock.cpp  clock.hpp  random.hpp  time.cpp  time.hpp
